demos/external-secrets-operator/good/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: external-secrets-operator
spec:
  selector:
    app: external-secrets-operator
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
